--- a/testTask/assets/style/_colors.scss
+++ b/testTask/assets/style/_colors.scss
@@ -11,9 +11,9 @@ $header-mid-text-color: rgb(255, 255, 255);
 //Main content colors:
 //
 $content-border: rgb(217,217,217);
-$text-grey-color: rgb(110, 110, 110);
-$lighter-grey-color: rgb(226,226,226);
-$text-links-color: rgb(198, 3, 4);
+$grey-text-color: rgb(110, 110, 110);
+$grey-lighter-color: rgb(226,226,226);
+$red-links-color: rgb(198, 3, 4);
 //
 //Aside colors:
 //
