--- a/testTask/assets/style/style.css
+++ b/testTask/assets/style/style.css
@@ -637,15 +637,17 @@ header .header-sub-wrapper .header-sub__container .sub__fav-news {
   line-height: 16px;
   text-align: center;
 }
-.content-wrapper .content-container .comments__container {
+.content-wrapper .content-container .comments__separator {
   margin-top: 25px;
+  height: 25px;
+  font-size: 0.875rem;
   width: 610px;
   text-transform: uppercase;
   color: #c60304;
   border-bottom: 3px solid #c60304;
 }
-.content-wrapper .content-container .comments__container .comments-block {
-  height: 500px;
+.content-wrapper .content-container .comments__separator .comments-block {
+  margin-top: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
